--- a/kubernetes-deployments/meetingApi.yaml
+++ b/kubernetes-deployments/meetingApi.yaml
@@ -3,62 +3,62 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: ms-demo
-  name: vf-meetingApi
+  name: vf-meetingapi
   labels:
-    app: vf-meetingApi
+    app: vf-meetingapi
     solution: vf-meeting-action
-  spec:
-    type: CLusterIP
-    ports:
+spec:
+  type: ClusterIP
+  ports:
     - port: 8090
       targetPort: 8090
-    selector:
-      app: vf-meetingApi
+  selector:
+    app: vf-meetingapi
 
  
 ---
 apiVersion: v1
 data:
-  mongo.host: vf-mongo
-  mongo.ip: 27017
+  mongo.address: vf-mongo:27017
 kind: ConfigMap
 metadata:
-  name: mongo-config
+  name: mongo-config2
   namespace: ms-demo
 
 
 ---
-apiVersion: app/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: ms-demo
-  name: vf-meetingApi
+  name: vf-meetingapi
   labels:
-    app: vf-meetingApi
+    app: vf-meetingapi
     solution: vf-meeting-action  
-  spec:
-    replica: 1
-    selector: 
-      matchLabel:
-        app: vf-meetingApi  
-    template:
-      metadata:
-        labels:
-          app: vf-meetingApi
-      spec:
-        containers:
-          - name: vf-meetingApi
-            image: vfdemo/meetingapi:0.1.0
-            env:
-              # Define the environment variable
-              - name: SPECIAL_LEVEL_KEY
-               valueFrom:
-                 configMapKeyRef:
-                   # The ConfigMap containing the value you want to assign to SPECIAL_LEVEL_KEY
-                   name: mongo-config
-                   # Specify the key associated with the value
-                   key: mongo.host
-                   key: mongo.ip
+spec:
+  replicas: 1
+  selector: 
+    matchLabels:
+      app: vf-meetingapi  
+  template:
+    metadata:
+      labels:
+        app: vf-meetingapi
+    spec:
+      containers:
+        - name: vf-meetingapi
+          image: ms-demo/meetingapi:0.1.0
+          env:
+            # Define the environment variable
+            - name: SPECIAL_LEVEL_KEY
+              valueFrom:
+                configMapKeyRef:
+                  # The ConfigMap containing the value you want to assign to SPECIAL_LEVEL_KEY
+                  name: mongo-config
+                  # Specify the key associated with the value
+                  key: mongo.address
           ports:
-            - containerPort: 8090        
-     
+            - containerPort: 8090
+      imagePullSecrets:
+      - name: ms-demo-secret
+      
