--- a/kubernetes-deployments/meetingApi.yaml
+++ b/kubernetes-deployments/meetingApi.yaml
@@ -15,6 +15,24 @@ spec:
   selector:
     app: vf-meetingapi
 
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  namespace: ms-demo
+  name: vf-meetingapi-nodeport
+  labels:
+    app: vf-meetingapi
+    solution: vf-meeting-action
+spec:
+  type: NodePort
+  ports:
+    - port: 8090
+      nodePort: 30090
+  selector:
+    app: vf-meetingapi     
+
  
 ---
 apiVersion: v1
@@ -48,7 +66,7 @@ spec:
     spec:
       containers:
         - name: vf-meetingapi
-          image: ms-demo/meetingapi:0.1.0
+          image: mycluster.icp:8500/ms-demo/meetingapi:0.1.0
           env:
             # Define the environment variable
             - name: MONGO_HOST
@@ -68,5 +86,5 @@ spec:
           ports:
             - containerPort: 8090
       imagePullSecrets:
-      - name: ms-demo-secret
+        - name: ms-demo-secret
       
