--- a/meetingUi/package.json
+++ b/meetingUi/package.json
@@ -6,7 +6,9 @@
   "author": "giovanni",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "ejs": "^2.6.1",
     "express": "^4.10.8",
+    "http-proxy-middleware": "^0.18.0",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0"
   }
