Working deployment on ICP on my W530.  meetingApi needs better mongo connection managemet (handling failure)

--- a/kubernetes-deployments/meetingUi.yaml
+++ b/kubernetes-deployments/meetingUi.yaml
@@ -33,6 +33,22 @@ spec:
   selector:
     app: vf-meetingui     
 
+
+---       
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  namespace: ms-demo
+  name: vf-meetingui
+spec:
+  rules:
+  - host: meetingactions
+    http:
+      paths:
+      - backend:
+          serviceName: vf-meetingui
+          servicePort: 8080
+           
  
 ---
 apiVersion: v1
