--- a/kubernetes-deployments/meetingApi.yaml
+++ b/kubernetes-deployments/meetingApi.yaml
@@ -85,6 +85,12 @@ spec:
                   key: mongo.port
           ports:
             - containerPort: 8090
+          livenessProbe:
+            httpGet:
+              path: /api/healthCheck
+              port: 8090
+            initialDelaySeconds: 20
+            periodSeconds: 5
       imagePullSecrets:
         - name: ms-demo-secret
       
