--- a/kubernetes-deployments/meetingApi.yaml
+++ b/kubernetes-deployments/meetingApi.yaml
@@ -67,6 +67,7 @@ spec:
       containers:
         - name: vf-meetingapi
           image: mycluster.icp:8500/ms-demo/meetingapi:0.1.0
+          imagePullPolicy: Always
           env:
             # Define the environment variable
             - name: MONGO_HOST
@@ -90,7 +91,7 @@ spec:
               path: /api/healthCheck
               port: 8090
             initialDelaySeconds: 20
-            periodSeconds: 5
+            periodSeconds: 5            
       imagePullSecrets:
         - name: ms-demo-secret
       
