--- a/kubernetes-deployments/mongo-init-job.yaml
+++ b/kubernetes-deployments/mongo-init-job.yaml
@@ -1,13 +1,14 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
+  namespace: ms-demo
   name: mongodb-init
   labels: 
     app: meetingactions
 spec:
   template: 
     metadata: 
-      name" mongodb-init
+      name: mongodb-init
     spec:
       containers:
         - name: mongodb-init
@@ -28,4 +29,4 @@ spec:
                   name: mongo-config
                   # Specify the key associated with the value
                   key: mongo.port
-          restartPolicy: never
+      restartPolicy: Never
